--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>  </head>
 <body>
     <h1>Beautiful website</h1>
     <p>This is a beautiful website. It's very beautiful!</p>
+    <p>This is a beautiful website.</p>
     <hr>
     <p>Click on the following link to <a href="https://www.google.com/">visit Google</a></p>
 </body>
