--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
     <h1>Beautiful website</h1>
     <p>This is a beautiful website. It's very beautiful!</p>
-    <p>This is a beautiful website.</p>
+    <p>This is a beautiful website..</p>
     <hr>
     <p>Click on the following link to <a href="https://www.google.com/">visit Google</a></p>
 </body>
