--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>  </head>
+<head> <link rel="stylesheet" href="style.css"> </head>
 <body>
     <h1>Beautiful website</h1>
     <p>This is a beautiful website. It's very beautiful!</p>
